# ML22-tentamen

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
dev/notebooks/: ray_results.ipynb  testing.ipynb
dev/scripts/: 01_model_design.py  02_tune.py  03_result.py  2c_model_design.py
logsGRUAtt/20230122-1036/: events.out.tfevents.1674380212.DESKTOP-35G6KTP.15272.0
models/: 20230117-183154model.pt  20230117-194837model.pt  20230122-104620GRUAtt.pt  20230129-092207GRUAtt.pt
reports/: antwoorden.md  ref.bib  report.tex
tentamen/: model.py  settings.py  train.py  viz.py
tentamen/data/: data_tools.py  datasets.py
