[tool.poetry]
name = "tentamen"
version = "0.1.0"
description = ""
authors = ["Raoul Grouls <raoul.grouls@businessdecision.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
torch = {version = "*"}
pydantic = "^1.10.4"
loguru = "^0.6.0"
gin-config = "^0.5.0"
tensorboard = "^2.11.0"
tqdm = "^4.64.1"
ray = {extras = ["tune"], version = "^2.2.0"}
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ptpython = "^3.0.22"
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
