[tool.poetry]
name = "tentamen"
version = "0.1.0"
description = ""
authors = ["Raoul Grouls <raoul.grouls@businessdecision.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
torch = {version = "*"}
pydantic = "^1.10.4"
loguru = "^0.6.0"
gin-config = "^0.5.0"
tensorboard = "^2.11.0"
tqdm = "^4.64.1"
ray = {extras = ["tune"], version = "^2.2.0"}
matplotlib = "^3.6.2"
hpbandster = "^0.7.4"
configspace = "^0.6.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pep8-naming = "^0.13.3"
flake8-annotations = "^2.9.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ptpython = "^3.0.22"
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^22.12.0"}
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
